--- a/Practical Data Science/Assignment 1/PDS1_Ioannis_Karampinis.ipynb
+++ b/Practical Data Science/Assignment 1/PDS1_Ioannis_Karampinis.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "**<span style=\"font-family:KerkisSans; font-size:2em;\">Assignment I</span>**\n",
     "\n",
-    "**<span style=\"font-family:KerkisSans; font-size:2em;\">Collect \\& explore data about the recent pandemic from Twitter</span>**\n",
+    "**<span style=\"font-family:KerkisSans; font-size:2em;\">Collect \& explore data about the recent pandemic from Twitter</span>**\n",
     "\n",
     "<span style=\"font-family:KerkisSans; font-size:2em; color: black\">M.Sc. Data Science | </span>\n",
     "<span style=\"font-family:KerkisSans; font-size:2em; color: black\">2020-2021</span>\n",
